--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "Other"
   ],
   "activationEvents": [
-    "onView:instagramReelsViewer.sidebar"
+    "onView:instagramReelsViewer.sidebar",
+    "onCommand:instagramReelsViewer.login"
   ],
   "main": "./out/extension.js",
   "contributes": {
